--- a/20170803-HTML CSS Isaac Newton Tribute Page/styles.css
+++ b/20170803-HTML CSS Isaac Newton Tribute Page/styles.css
@@ -1,30 +1,29 @@
-.wrapper{
-  display:grid;
+.wrapper {
+  display: grid;
   background: black;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: auto auto auto;
   grid-template-areas:  "header header"
-                        "image biography"
+                        "image biography" 
                         "reference footer";
-  grid-gap: 10px;
   font-family: "Calibri", arial, sans-serif;
 }
 
-@media screen 
-  and (max-width: 836px) {
+@media screen and (max-width: 736px) {
   .wrapper {
-    display:grid;
+    display: grid;
     background: black;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto auto auto;
-    grid-template-areas:  "header"
-                          "image"
-                          "biography"
-                          "reference"
+    grid-template-areas:  "header" 
+                          "image" 
+                          "biography" 
+                          "reference" 
                           "footer";
     grid-gap: 00px;
+    grid-gap: 10px;
     font-family: "Calibri", arial, sans-serif;
-	}
+  }
 }
 
 .header {
