--- a/20170805-1- HTML CSS Portfolio Page/styles.css
+++ b/20170805-1- HTML CSS Portfolio Page/styles.css
@@ -1,10 +1,11 @@
 .site {
   font-family: "Calibri", arial, sans-serif;
   margin: 90px 0px 0px 0px;
+  font-size:20px;
 }
 
 h1{
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .header {
@@ -27,7 +28,7 @@ h1{
 
 .siteName {
   grid-area: siteName;
-  font-size: 24px;
+  font-size: 30px;
   text-align: left;
   padding: 5px;
   padding-left:10px;
@@ -46,7 +47,7 @@ a {
     padding: 5px;
     padding-left:10px;
     text-decoration: none;  /*tirar o sublinhado de hyperlink*/
-    font-size: 020px;
+    font-size: 24px;
 }
 
 a:hover {
@@ -114,8 +115,8 @@ a:hover {
 
 .contact {
   grid-area: contact;
-  color: navy;
-  background: rgb(189,215,238);
+  color: lightblue;
+  background: rgb(31,61,126);
   padding: 10px;
 
   padding-top: 74px; 
