--- a/20170805-1 - HTML CSS Portfolio Page/backup2/styles.css
+++ b/20170805-1 - HTML CSS Portfolio Page/backup2/styles.css
@@ -1,7 +1,6 @@
 h1{
     font-size: 24px;
     margin: 0px;
-    margin-bottom: 10px;
 }
 
 p {
@@ -59,6 +58,7 @@ a:hover {
 }
 
 
+
 .wrapper {
   margin: 0px 0px 0px 0px;
   display: grid;
@@ -102,41 +102,9 @@ a:hover {
 
 .portfolio {
   grid-area: portfolio;
-  color: rgb(0,32,96);
+  color: navy;
   background: rgb(189,215,238);
   padding: 10px;
-}
-
-.Projects_Boxes{
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(auto-fill,minmax(345px,auto));
-  align-items: start;
-}
-
-.Sub_Projects_Boxes{
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(auto-fill, minmax(150px,auto));
-  border:5px solid black;
-  justify-items: center;
-  align-items: start;
-
-}
-
-.box{
-  text-align: center;
-  border: 5px solid navy;
-  background-color: rgb(0,32,96);
-  color: white;
-  border-radius: 5px;
-  padding: 0px;
-  font-size: 16px;
-  display: flex;
-  align-items: center; /* align vertical */
-  height:150px;
-  width:150px;
-
 }
 
 .contact {
@@ -148,14 +116,14 @@ a:hover {
 
 .about {
   grid-area: about;
-  color: rgb(0,32,96);
+  color: navy;
   background: rgb(189,215,238);
   padding: 10px;
 }
 
 .empty {
   grid-area: empty;
-  background: honeydew;
+  background: white;
   padding-bottom: 800px;
 }
 /*
