--- a/20170805-1 - HTML CSS Portfolio Page/backup3/styles.css
+++ b/20170805-1 - HTML CSS Portfolio Page/backup3/styles.css
@@ -107,21 +107,11 @@ a:hover {
   padding: 10px;
 }
 
-.Projects_Boxes{
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(auto-fill,minmax(345px,auto));
-  align-items: start;
-}
-
-.Sub_Projects_Boxes{
+.portfolio_boxes{
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(auto-fill, minmax(150px,auto));
-  border:5px solid black;
-  justify-items: center;
-  align-items: start;
-
+  grid-template-columns: repeat(auto-fill, 150px ) ;
+  grid-auto-rows: 150px ;
 }
 
 .box{
@@ -130,13 +120,11 @@ a:hover {
   background-color: rgb(0,32,96);
   color: white;
   border-radius: 5px;
-  padding: 0px;
+  padding: 10px;
   font-size: 16px;
   display: flex;
+  justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */
-  height:150px;
-  width:150px;
-
 }
 
 .contact {
