--- a/20170805-1 - HTML CSS Portfolio Page/styles.css
+++ b/20170805-1 - HTML CSS Portfolio Page/styles.css
@@ -1,8 +1,12 @@
+*{
+  margin: 0px; /*overrule default stylesheet of the browser*/
+  padding:0px; /*overrule default stylesheet of the browser*/
+  box-sizing: border-box; /*use border-box sizing instead of default 'content-box' in which box dimensions are affected by border thickness or padding. */
+}
+
 h1{
     font-size: 24px;
-    margin: 0px;
     margin-bottom: 10px;
-
 }
 
 p {
@@ -93,7 +97,7 @@ a:active {
   .home {
     grid-area: home;
 
-    color: lightblue;
+    color: white;
     background: rgb(31,61,126);
     padding: 10px;
   }
@@ -185,7 +189,7 @@ a:active {
   .contact {
     grid-area: contact;
 
-    color: lightblue;
+    color: white;
     background: rgb(31,61,126);
     padding: 10px;
   }
@@ -196,6 +200,10 @@ a:active {
     color: rgb(0,32,96);
     background: rgb(189,215,238);
     padding: 10px;
+  }
+
+  #FCC_Link{
+    color: rgb(0,32,96); /*Senão fica com a cor dos <a>*/
   }
 
   .empty {
