--- a/20180415-1 - Air Strike/styles.css
+++ b/20180415-1 - Air Strike/styles.css
@@ -1,10 +1,17 @@
-body {
+html {
   overflow: hidden;   /*To avoid scrollbars appearing because Canvas is by default an inline element*/
   margin: 0;
   padding:0;
   background-size: cover;
   /*margin do Body por default é 8px */
   /*border: 5px solid red;*/
+}
+
+body {
+  position: absolute;
+  width:100%;
+  height:100%;
+  overflow: auto;
 }
 
 #container {
