--- a/20180415-1 - Air Strike/styles.css
+++ b/20180415-1 - Air Strike/styles.css
@@ -2,24 +2,38 @@ html {
   overflow: hidden;   /*To avoid scrollbars appearing because Canvas is by default an inline element*/
   margin: 0;
   padding:0;
-  background-size: cover;
+  width:100%;
+  height:100%;
   /*margin do Body por default é 8px */
   /*border: 5px solid red;*/
 }
 
 
 body {
-  width:100%;
-  height:100%;
-  overflow: auto;
+  background-image: url("Assets/landscape/Landscape2.jpg");
+  background-size: cover;
 }
 
 
-#canvas {
+canvas{
   position: absolute;
-  z-index: 1;
-  display: block;
   top: 0px;
   left: 0px;
   /*border: 5px solid blue;*/
+}
+
+#Canvas-3 {
+  z-index: 3;
+}
+
+#Canvas-2 {
+  z-index: 2;
+}
+
+#Canvas-1 {
+  z-index: 1;
+}
+
+#Canvas-0 {
+  z-index: 0;
 }
