--- a/20180415-1 - Air Strike/styles.css
+++ b/20180415-1 - Air Strike/styles.css
@@ -1,11 +1,10 @@
 html {
-  overflow: hidden;   /*To avoid scrollbars appearing because Canvas is by default an inline element*/
-  margin: 0;
+  margin: 0;          /* margin do Body por default é 8px */
   padding:0;
   width:100%;
   height:100%;
-  position: fixed;
-  /*margin do Body por default é 8px */
+  position: fixed;    /* For the screen not scroll vertically with touch */
+  overflow: hidden;   /* To avoid scrollbars appearing because Canvas is by default an inline element */
   /*border: 5px solid red;*/
 }
 
@@ -20,21 +19,7 @@ canvas{
   position: absolute;
   top: 0px;
   left: 0px;
+  z-index: 1;
   /*border: 5px solid blue;*/
 }
 
-#Canvas-3 {
-  z-index: 3;
-}
-
-#Canvas-2 {
-  z-index: 2;
-}
-
-#Canvas-1 {
-  z-index: 1;
-}
-
-#Canvas-0 {
-  z-index: 0;
-}
